<resources>
    <string name="app_name">Spotted</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Display Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_likes">Favourites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_register">Register</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_login">Log In</string>
    <string name="menu_help">Help and Feedback</string>
    <string name="no_data_available">No data available</string>
    <string name="register_link"><u>Create Account</u></string>

    <!-- Buttons -->
    <string name="help_label">What are you unhappy with?</string>

    <!-- Form Hints -->
    <string name="form_fname_hint">First Name</string>
    <string name="form_lname_hint">Last Name</string>
    <string name="form_phone_hint">Phone</string>
    <string name="form_email_hint">Email</string>
    <string name="form_password_hint">Password</string>
    <string name="form_username_hint">Display Name</string>
    <string name="form_location_hint">Location</string>
    <string name="user_location_hint">location</string>

    <!--Button Checkbox -->
    <string name="help_checkbox_design">Design</string>
    <string name="help_checkbox_notif">Notifications</string>
    <string name="help_checkbox_lang">Language</string>
    <string name="help_checkbox_subs">Subscription</string>
    <string name="help_checkbox_other">Other</string>
    <string name="help_checkbox_ads">Ads</string>

    <!--Fragment text -->
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_msg">This will delete all account info and profile photo</string>

    <!-- Dialogs -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- menus -->
    <string name="menu_save">save</string>
    <string name="menu_submit">submit</string>
    <string name="menu_edit">Edit</string>

    <!-- Placeholders -->
    <string name="phone_placeholder">+267 71406569</string>
    <string name="name_placeholder">Display Name</string>
    <string name="email_placeholder">testuser@email.com</string>
    <string name="location_placeholder">Gaborone, Botswana</string>

</resources>