<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/edit_profile_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        >
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/linear_progress_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_weight="0"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_header"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_header_frame"
                android:orientation="vertical"
                android:gravity="center_horizontal|center_vertical"
                >
                <androidx.cardview.widget.CardView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="@dimen/profile_image_circle"
                    android:layout_height="@dimen/profile_image_circle"
                    android:layout_marginBottom="@dimen/form_top_bot_margin"
                    android:layout_marginTop="@dimen/form_top_bot_margin"
                    app:cardCornerRadius="@dimen/profile_image_circle"
                    android:backgroundTint="@color/colorAccent"
                    >
                    <ImageView
                        android:id="@+id/profile_pic"
                        android:layout_width="@dimen/profile_image_size"
                        android:layout_height="@dimen/profile_image_size"
                        android:src="@drawable/icon_acount"
                        android:scaleType="centerCrop"
                        />

                </androidx.cardview.widget.CardView>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/edit_profile_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="@dimen/form_header_fab_margin"
                    android:layout_marginLeft="@dimen/form_header_fab_margin"
                    app:srcCompat="@drawable/ic_action_camera_filled"
                    app:backgroundTint="@color/colorPrimaryDark"
                    />
            </FrameLayout>
            <TextView
                android:id="@+id/edit_user_profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_text_edit_spacing"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:text="Email"
                />

        </LinearLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/form_left_right_margin"
            android:layout_marginRight="@dimen/form_left_right_margin"
            android:layout_marginBottom="@dimen/form_text_edit_spacing"
            android:background="@drawable/rounded_edit_text"
            android:rowCount="1"
            android:columnCount="3"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_account"
                android:scaleType="centerCrop"
                android:paddingLeft="@dimen/form_image_edit_spacing"
                app:tint="@color/colorAccent"
                />
            <EditText
                android:id="@+id/edit_user_profile_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/form_text_edit_height"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/form_image_edit_spacing"
                android:layout_marginRight="@dimen/form_text_edit_grid_mr"
                android:layout_column="1"
                android:layout_columnSpan="2"
                android:layout_row="0"
                android:hint="@string/form_username_hint"
                android:textColor="@color/form_text_color"
                android:textColorHint="@color/form_text_hint"
                android:background="@null"
                />

        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="1"
            android:layout_marginLeft="@dimen/form_left_right_margin"
            android:layout_marginRight="@dimen/form_left_right_margin"
            android:layout_marginBottom="@dimen/form_text_edit_spacing"
            android:background="@drawable/rounded_edit_text">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_phone"
                android:scaleType="centerCrop"
                android:paddingLeft="@dimen/form_image_edit_spacing"
                app:tint="@color/colorAccent"/>
            <EditText
                android:id="@+id/edit_user_profile_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/form_text_edit_height"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/form_image_edit_spacing"
                android:layout_marginRight="@dimen/form_text_edit_grid_mr"
                android:layout_column="1"
                android:layout_columnSpan="2"
                android:layout_row="0"
                android:hint="@string/form_phone_hint"
                android:textColor="@color/form_text_color"
                android:textColorHint="@color/form_text_hint"
                android:background="@null" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/form_left_right_margin"
            android:layout_marginRight="@dimen/form_left_right_margin"
            android:layout_marginBottom="@dimen/form_text_edit_spacing"
            android:rowCount="1"
            android:columnCount="2"
            android:background="@drawable/rounded_edit_text">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_column="0"
                android:src="@drawable/ic_action_location"
                android:scaleType="centerCrop"
                android:paddingLeft="@dimen/form_image_edit_spacing"
                app:tint="@color/colorAccent"
                />
            <EditText
                android:id="@+id/edit_user_profile_location"
                android:layout_width="match_parent"
                android:layout_height="@dimen/form_text_edit_height"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/form_image_edit_spacing"
                android:layout_marginRight="@dimen/form_text_edit_grid_mr"
                android:layout_column="1"
                android:hint="@string/form_location_hint"
                android:textColor="@color/form_text_color"
                android:textColorHint="@color/form_text_hint"
                android:background="@null"
                />
        </GridLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>